Remove deprecated code from Call and fix remaining uses.